# Moxon_OE1EBG

./: .envrc  .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  Justfile  Moxon_OE1EBG.20260326-215447.FCBak  Moxon_OE1EBG.20260326-220619.FCBak  Moxon_OE1EBG.20260326-230249.FCBak  Moxon_OE1EBG.20260326-231523.FCBak  Moxon_OE1EBG.20260327-001223.FCBak  Moxon_OE1EBG.20260327-002219.FCBak  Moxon_OE1EBG.FCStd  PipeRetainerVariants.FCStd  README.md  TUNING.md  export_config.yml  generate_variant_configs.py  pyproject.toml  template_print_settings.3mf  variant_array_assignment.py
.freecad_tools/: config.yml  export.yml  macro_config.yml  template_print_settings.3mf
.github/workflows/: commit.yml  nightly.yml  tag.yml
notebooks/: interactive_moxon_calculator.ipynb  moxon_theory.md  moxon_tuning_protocol.ipynb
notebooks/data/: moxon_tuning_log.csv
prints/: Moxon_OE1EBG-Angle_Round_1notch.3mf  Moxon_OE1EBG-Angle_Round_no_notch.3mf  Moxon_OE1EBG-Cover.3mf  Moxon_OE1EBG-Feed.3mf  Moxon_OE1EBG_print.3mf
